GERONIMO-3016 Server assemblies fail to start on Windows when there is a space in the path.  Verified this fixes the startup failure on WinXP and verified it doesn't break Linux.  Frank, thanks for the patch.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@526866 13f79535-47bb-0310-9956-ffa450edef68